Añadi el componente para las metas en el mmain y tambien puse los estilos

--- a/src/Componentes/Compartidos/Encabezado.module.css
+++ b/src/Componentes/Compartidos/Encabezado.module.css
@@ -2,7 +2,7 @@
     @apply h-xl flex justify-between shadow bg-white text-gray-700 relative;
 }
 
-.contenedor-logo{
+.contenedorLogo{
     @apply flex items-center pl-4 ;
 }
 .logo{
