--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,15 @@
-
+.tarjeta {
+    @apply rounded-xl m-2 text-gray-700 text-xs mx-4 nm-flat-white;
+}
+.boton{
+    @apply text-sm font-bold py-1 px-4 rounded-full;
+}
+.boton--negro {
+    @apply text-white nm-flat-gray-700 hover:bg-gray-950;
+}
+.boton--rojo{
+    @apply text-red-500 nm-flat-gray-100 border bg-red-700;
+}
+.boton--gris{
+    @apply nm-flat-gray-100 hover:bg-gray-200;
+}
